--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
   </head>
   <body>
     <header class="grid-header">
-      1
+      <div class="header-content">
+        <h1>Welcome</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, qui, vitae. Ea minima saepe voluptate quibusdam debitis atque, fugiat veritatis.</p>
+        <button class="header-button">
+          Read more
+        </button>
+      </div>
     </header>
     <section class="grid-section">
       2
@@ -21,8 +27,11 @@
     <section class="grid-contact">
       5
     </section>
-    <footer class="grid-footer">
+    <section class="grid-about">
       6
+    </section>
+    <footer class="grid-footer">
+      7
     </footer>
   </body>
 </html>
