--- a/index.html
+++ b/index.html
@@ -16,13 +16,18 @@
       </div>
     </header>
     <section class="grid-section">
-      2
+      <h2>Web & Application Development</h2>
+      <div class="section-columns">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut neque, similique voluptatem a iste quos.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel itaque quia, minus, nisi iste similique!</p>
+      </div>
     </section>
     <section class="grid-skills">
       3
     </section>
     <section class="grid-section">
-      4
+      <h2>We handle all of your digital needs</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint recusandae incidunt, sequi et doloremque dolorum facere obcaecati non sit explicabo.</p>
     </section>
     <section class="grid-contact">
       5
