added about and contact content and sytling

--- a/index.html
+++ b/index.html
@@ -46,10 +46,16 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint recusandae incidunt, sequi et doloremque dolorum facere obcaecati non sit explicabo.</p>
     </section>
     <section class="grid-contact">
-      5
+      <div class="contact">
+        <h2>Contact Us</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur reiciendis distinctio ipsa soluta cupiditate doloribus?</p>
+      </div>
     </section>
     <section class="grid-about">
-      6
+      <div class="about">
+        <h2>About Us</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis error sapiente natus optio perspiciatis alias.</p>
+      </div>
     </section>
     <footer class="grid-footer">
       7
