added footer content and styling

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
       6
     </section>
     <footer class="grid-footer">
-      7
+      <p>Web Solutions</p>
+      <p>Designed by Norbi4268</p>
     </footer>
   </body>
 </html>
